--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Tasnim-Mohammed.github.io/portfolio#",
+  "homepage": "https://Tasnim-Mohammed.github.io/portfolio",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
     "@testing-library/dom": "^10.4.1",
